--- a/package.json
+++ b/package.json
@@ -170,7 +170,9 @@
     "semver": "7.3.8",
     "semver-regex": "3.1.4",
     "trim-newlines": "3.0.1",
-    "webpack": "5.76.0"
+    "webpack": "5.76.0",
+    "xml2js": "0.5.0",
+    "decode-uri-component": "0.2.2"
   },
   "browserslist": {
     "production": [
