--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "url": "https://github.com/rudderlabs/rudder-sdk-js.git"
   },
   "dependencies": {
-    "@lukeed/uuid": "2.0.0",
+    "@lukeed/uuid": "2.0.1",
     "@ndhoule/clone": "^1.0.0",
     "@ndhoule/defaults": "2.0.1",
     "@ndhoule/each": "2.0.1",
@@ -81,7 +81,7 @@
     "md5": "2.3.0",
     "obj-case": "0.2.1",
     "on-body": "0.0.1",
-    "ramda": "0.28.0",
+    "ramda": "0.29.0",
     "regenerator-runtime": "^0.13.7",
     "rudder-component-cookie": "0.0.1",
     "semver": "7.3.8",
@@ -90,72 +90,74 @@
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
-    "@babel/core": "7.20.12",
-    "@babel/eslint-parser": "7.19.1",
+    "@babel/core": "7.21.4",
+    "@babel/eslint-parser": "7.21.3",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-transform-arrow-functions": "7.20.7",
     "@babel/plugin-transform-object-assign": "7.18.6",
-    "@babel/preset-env": "7.20.2",
-    "@commitlint/config-conventional": "17.4.2",
+    "@babel/preset-env": "7.21.4",
+    "@commitlint/config-conventional": "17.4.4",
     "@digitalroute/cz-conventional-changelog-for-jira": "8.0.0",
     "@rollup/plugin-babel": "6.0.3",
     "@rollup/plugin-commonjs": "24.0.1",
     "@rollup/plugin-json": "6.0.0",
-    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-node-resolve": "15.0.2",
     "@rollup/plugin-replace": "5.0.2",
-    "@size-limit/file": "8.1.2",
-    "@size-limit/webpack": "8.1.2",
+    "@size-limit/file": "8.2.4",
+    "@size-limit/webpack": "8.2.4",
     "babel-eslint": "10.1.0",
     "commitizen": "4.3.0",
-    "commitlint": "17.4.2",
+    "commitlint": "17.5.1",
     "conventional-changelog-cli": "2.2.2",
     "conventional-github-releaser": "3.1.5",
     "dotenv": "16.0.3",
-    "esbuild": "0.17.4",
+    "esbuild": "0.17.16",
     "esbuild-jest": "0.5.0",
-    "eslint": "8.32.0",
+    "eslint": "8.38.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-prettier": "8.6.0",
-    "eslint-plugin-compat": "4.0.2",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-compat": "4.1.4",
     "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-sonarjs": "0.18.0",
-    "eslint-plugin-unicorn": "45.0.2",
+    "eslint-plugin-sonarjs": "0.19.0",
+    "eslint-plugin-unicorn": "46.0.0",
     "esm": "3.2.25",
     "husky": "8.0.3",
     "isomorphic-fetch": "3.0.0",
-    "jest": "29.4.1",
+    "jest": "29.5.0",
     "jest-date-mock": "1.0.8",
-    "jest-environment-jsdom": "29.4.1",
+    "jest-environment-jsdom": "29.5.0",
     "jest-sonar": "0.2.15",
-    "jscpd": "3.5.3",
-    "lint-staged": "13.1.0",
-    "madge": "5.0.1",
-    "msw": "0.49.2",
-    "prettier": "2.8.3",
+    "jscpd": "3.5.4",
+    "lint-staged": "13.2.1",
+    "madge": "6.0.0",
+    "msw": "1.2.1",
+    "prettier": "2.8.7",
     "rollup": "2.79.1",
     "rollup-plugin-copy": "3.4.0",
-    "rollup-plugin-filesize": "9.1.2",
+    "rollup-plugin-filesize": "10.0.0",
     "rollup-plugin-generate-html-template": "1.7.0",
     "rollup-plugin-livereload": "2.0.5",
-    "rollup-plugin-polyfill-node": "^0.12.0",
+    "rollup-plugin-polyfill-node": "0.12.0",
     "rollup-plugin-serve": "2.0.2",
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-visualizer": "5.9.0",
-    "size-limit": "8.1.2",
+    "size-limit": "8.2.4",
     "standard-version": "9.5.0"
   },
   "overrides": {
     "@xmldom/xmldom": "0.8.5",
     "debug": "4.3.4",
+    "decode-uri-component": "0.4.1",
     "dot-prop": "5.3.0",
     "json5": "2.2.2",
     "http-cache-semantics": "4.1.1",
     "semver": "7.3.8",
     "semver-regex": "3.1.4",
-    "shelljs": "^0.8.4",
+    "shelljs": "0.8.4",
     "trim-newlines": "3.0.1",
-    "webpack": "5.76.0"
+    "webpack": "5.76.0",
+    "xml2js": "0.5.0"
   },
   "browserslist": {
     "production": [
