--- a/examples/serverless/vercel-edge/package.json
+++ b/examples/serverless/vercel-edge/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@rudderstack/analytics-js-service-worker": "^3.0.0-beta.6",
+    "@rudderstack/analytics-js-service-worker": "*",
     "@types/node": "20.5.8",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
