--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "setup": "npm i --include=optional && npm run build:package",
     "setup:ci": "npm ci && npm i @nx/nx-linux-x64-gnu && npm run build:package",
     "clean": "nx run-many -t clean --parallel=false && nx reset && git clean -xdf node_modules",
-    "clean:cache": "rimraf -rf ./node_modules/.cache",
+    "clean:cache": "rimraf -rf ./node_modules/.cache && rimraf -rf ./.nx/cache",
     "start": "nx run-many --targets=start --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
     "start:modern": "nx run-many --targets=start-modern --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
     "build": "nx run-many -t build --parallel=false",
@@ -71,12 +71,11 @@
     "@ndhoule/keys": "2.0.0",
     "@preact/signals-core": "1.5.0",
     "@segment/localstorage-retry": "1.3.0",
-    "@segment/loosely-validate-event": "2.0.0",
     "@segment/top-domain": "3.0.1",
     "@vespaiach/axios-fetch-adapter": "0.3.1",
     "assert": "2.1.0",
-    "axios": "0.27.2",
-    "axios-retry": "3.8.0",
+    "axios": "1.6.0",
+    "axios-retry": "3.8.1",
     "component-each": "0.2.6",
     "component-emitter": "1.3.0",
     "component-querystring": "2.0.1",
@@ -118,26 +117,26 @@
     "@commitlint/config-lerna-scopes": "17.8.1",
     "@digitalroute/cz-conventional-changelog-for-jira": "8.0.1",
     "@jscutlery/semver": "4.0.0",
-    "@nx/eslint": "17.0.2",
-    "@nx/eslint-plugin": "17.0.2",
-    "@nx/jest": "17.0.2",
-    "@nx/js": "17.0.2",
-    "@nx/workspace": "17.0.2",
+    "@nx/eslint": "17.0.3",
+    "@nx/eslint-plugin": "17.0.3",
+    "@nx/jest": "17.0.3",
+    "@nx/js": "17.0.3",
+    "@nx/workspace": "17.0.3",
     "@originjs/vite-plugin-federation": "1.3.2",
     "@rollup/plugin-alias": "5.0.1",
     "@rollup/plugin-babel": "6.0.4",
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-json": "6.0.1",
     "@rollup/plugin-node-resolve": "15.2.3",
-    "@rollup/plugin-replace": "5.0.4",
+    "@rollup/plugin-replace": "5.0.5",
     "@rollup/plugin-terser": "0.4.4",
-    "@size-limit/file": "10.0.1",
-    "@size-limit/webpack": "10.0.1",
-    "@types/component-emitter": "1.2.13",
-    "@types/crypto-js": "4.1.3",
-    "@types/jest": "29.5.6",
-    "@types/lodash.clonedeep": "4.5.8",
-    "@types/lodash.isstring": "4.0.8",
+    "@size-limit/file": "10.0.2",
+    "@size-limit/webpack": "10.0.2",
+    "@types/component-emitter": "1.2.14",
+    "@types/crypto-js": "4.2.1",
+    "@types/jest": "29.5.7",
+    "@types/lodash.clonedeep": "4.5.9",
+    "@types/lodash.isstring": "4.0.9",
     "@types/node": "18.17.12",
     "@types/ramda": "0.29.7",
     "@typescript-eslint/eslint-plugin": "5.62.0",
@@ -147,9 +146,10 @@
     "babel-plugin-transform-object-hasown": "1.1.0",
     "commitizen": "4.3.0",
     "commitlint": "17.8.1",
-    "core-js": "3.33.1",
+    "component-type": "1.2.1",
+    "core-js": "3.33.2",
     "dotenv": "16.3.1",
-    "eslint": "8.52.0",
+    "eslint": "8.53.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.1.0",
@@ -157,8 +157,8 @@
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-compat": "4.2.0",
     "eslint-plugin-import": "2.29.0",
-    "eslint-plugin-sonarjs": "0.21.0",
-    "eslint-plugin-unicorn": "48.0.1",
+    "eslint-plugin-sonarjs": "0.23.0",
+    "eslint-plugin-unicorn": "49.0.0",
     "esm": "3.2.25",
     "http-server": "14.1.1",
     "husky": "8.0.3",
@@ -169,20 +169,21 @@
     "jest-junit": "16.0.0",
     "jest-sonar": "0.2.16",
     "jest-watch-typeahead": "2.2.2",
+    "join-component": "1.1.0",
     "jscpd": "3.5.10",
     "lint-staged": "15.0.2",
     "madge": "6.1.0",
     "msw": "1.3.2",
     "ngx-deploy-npm": "7.0.1",
-    "nx": "17.0.2",
+    "nx": "17.0.3",
     "patch-package": "8.0.0",
     "prettier": "3.0.3",
-    "rollup": "4.1.4",
+    "rollup": "4.3.0",
     "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-delete": "2.0.0",
     "rollup-plugin-dts": "6.1.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "1.1.23",
-    "rollup-plugin-external-globals": "0.8.0",
+    "rollup-plugin-external-globals": "0.9.0",
     "rollup-plugin-filesize": "10.0.0",
     "rollup-plugin-generate-html-template": "1.7.0",
     "rollup-plugin-livereload": "2.0.5",
@@ -191,7 +192,7 @@
     "rollup-plugin-typescript2": "0.36.0",
     "rollup-plugin-visualizer": "5.9.2",
     "serve": "14.2.1",
-    "size-limit": "10.0.1",
+    "size-limit": "10.0.2",
     "standard-version": "9.5.0",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
@@ -201,16 +202,16 @@
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.1.4",
-    "@nx/nx-darwin-arm64": "17.0.2",
-    "@nx/nx-darwin-x64": "17.0.2",
-    "@nx/nx-linux-x64-gnu": "17.0.2",
-    "@nx/nx-win32-x64-msvc": "17.0.2"
+    "@nx/nx-darwin-arm64": "17.0.3",
+    "@nx/nx-darwin-x64": "17.0.3",
+    "@nx/nx-linux-x64-gnu": "17.0.3",
+    "@nx/nx-win32-x64-msvc": "17.0.3"
   },
   "overrides": {
     "@babel/traverse": "7.23.2",
-    "@nx/devkit": "17.0.2",
+    "@nx/devkit": "17.0.3",
     "debug": "4.3.4",
-    "rollup": "4.1.4"
+    "rollup": "4.3.0"
   },
   "lint-staged": {
     "*.{json,js,md,ts}": "prettier --write"
