--- a/packages/analytics-js-service-worker/package.json
+++ b/packages/analytics-js-service-worker/package.json
@@ -63,17 +63,21 @@
   },
   "dependencies": {
     "@lukeed/uuid": "2.0.1",
-    "@segment/loosely-validate-event": "2.0.0",
     "@vespaiach/axios-fetch-adapter": "0.3.1",
-    "axios": "0.27.2",
-    "axios-retry": "3.8.0",
+    "assert": "2.1.0",
+    "axios": "1.6.0",
+    "axios-retry": "3.8.1",
+    "component-type": "1.2.1",
+    "join-component": "1.1.0",
     "lodash.clonedeep": "4.5.0",
     "lodash.isstring": "4.0.1",
     "ms": "2.1.3",
     "jest-date-mock": "1.0.8",
     "msw": "1.3.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "18.17.12"
+  },
   "overrides": {},
   "browserslist": {
     "production": [
