--- a/packages/loading-scripts/tsconfig.spec.json
+++ b/packages/loading-scripts/tsconfig.spec.json
@@ -7,6 +7,7 @@
     "sourceMap": true,
     "inlineSourceMap": true,
     "isolatedModules": true,
+    "verbatimModuleSyntax": false,
     "types": ["jest", "node"]
   },
   "include": [
