fix(monorepo): update vulnerable dependencies

--- a/examples/gatsby/sample-gatsby-plugin-usage/package.json
+++ b/examples/gatsby/sample-gatsby-plugin-usage/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "sample-using-gatsby-plugin",
-  "author": "George Bardis",
+  "author": "RudderStack",
   "keywords": [
     "gatsby"
   ],
