--- a/examples/symfony/sample/package.json
+++ b/examples/symfony/sample/package.json
@@ -18,6 +18,6 @@
     "build": "encore production --progress"
   },
   "dependencies": {
-    "@rudderstack/analytics-js": "^3.0.0-beta.14"
+    "@rudderstack/analytics-js": "*"
   }
 }
