--- a/package.json
+++ b/package.json
@@ -205,7 +205,8 @@
     "@rollup/rollup-linux-x64-gnu": "4.9.6"
   },
   "overrides": {
-    "debug": "4.3.4"
+    "debug": "4.3.4",
+    "ip": "2.0.1"
   },
   "lint-staged": {
     "*.{json,js,md,ts}": "prettier --write"
