--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rudderstack/analytics-js",
-  "version": "3.0.0-beta.24",
-  "description": "RudderStack Javascript SDK",
+  "version": "3.0.0",
+  "description": "RudderStack JavaScript SDK",
   "main": "dist/npm/modern/cjs/index.js",
   "module": "dist/npm/modern/esm/index.js",
   "exports": {
@@ -90,12 +90,8 @@
     "build:browser:LH": "nx run @rudderstack/analytics-js:build-browser && nx run @rudderstack/analytics-js:build-browser-modern"
   },
   "devDependencies": {
-    "@lukeed/uuid": "2.0.1",
-    "@preact/signals-core": "1.5.1",
     "@rudderstack/analytics-js-common": "*",
-    "@rudderstack/analytics-js-plugins": "*",
-    "ramda": "0.29.1",
-    "storejs": "2.0.7"
+    "@rudderstack/analytics-js-plugins": "*"
   },
   "browserslist": {
     "production": [
