--- a/examples/gatsby/sample-gatsby-plugin-usage/package.json
+++ b/examples/gatsby/sample-gatsby-plugin-usage/package.json
@@ -17,15 +17,23 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "gatsby": "^5.13.4",
+    "gatsby": "5.13.6",
     "gatsby-plugin-rudderstack": "*",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "typescript": "^5.4.5"
+  },
+  "overrides": {
+    "pretty-error": "4.0.0",
+    "axios": "1.7.2",
+    "webpack-dev-middleware": "7.2.1",
+    "braces": "3.0.3",
+    "micromatch": "4.0.6",
+    "serialize-javascript": "6.0.2"
   }
 }
