--- a/examples/nextjs/page-router/sample-app/package.json
+++ b/examples/nextjs/page-router/sample-app/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@rudderstack/analytics-js": "*",
-    "next": "13.5.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "14.1.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
