--- a/examples/reactjs/js/sample-app/package.json
+++ b/examples/reactjs/js/sample-app/package.json
@@ -7,13 +7,23 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "react-scripts": "5.0.1",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.96",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25"
+  },
   "overrides": {
-    "nth-check": "2.1.1"
+    "nth-check": "2.1.1",
+    "braces": "3.0.3",
+    "micromatch": "4.0.6",
+    "serialize-javascript": "6.0.2",
+    "resolve-url-loader": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
