--- a/examples/serverless/vercel-edge/package.json
+++ b/examples/serverless/vercel-edge/package.json
@@ -10,17 +10,23 @@
   },
   "dependencies": {
     "@rudderstack/analytics-js-service-worker": "*",
-    "@types/node": "20.5.8",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.5.4",
+    "next": "14.2.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "typescript": "5.2.2",
+    "@types/node": "20.5.8",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "eslint": "8.57.0",
+    "eslint-config-next": "13.5.6"
+  },
+  "overrides": {
+    "braces": "3.0.3",
+    "micromatch": "4.0.6"
   }
 }
