fix: event API overloads (#1782)
* fix: event api overloads

* chore: fix track api overload tests

* fix: all issues with event api overloads

* fix: page api overloads and sanity suite

* fix: api overloads for destination analytics instance

* fix: api overloads types

* chore: remove circular dependencies check temporarily to avoid vulnerabilities

* fix: avoid delete operator

* chore: address lint issues

* chore: Update packages/sanity-suite/src/testBookSuites/alias.js

Co-authored-by: Moumita <36885121+MoumitaM@users.noreply.github.com>

* chore: fix targets and size limit configuration

* chore: build packages for publint

* chore: fix pacakge.json for publint

* chore: do not remove type declaration files

* chore: use apiOptions naming

* chore: fix type

* fix: remove unwanted code and improve coverage

* chore: fix package script

* chore: update precommit hook to run for only affected projects

* chore: run scripts only for affected packages

* chore: fix setup:ci script

* chore: fix base ref

* chore: fetch all commits

* chore: restore size build behavior

---------

Co-authored-by: Moumita <36885121+MoumitaM@users.noreply.github.com>

--- a/nx.json
+++ b/nx.json
@@ -37,27 +37,23 @@
       "inputs": ["default", "^production"],
       "cache": true
     },
-    "build-browser": {
+    "build:modern": {
       "inputs": ["default", "^production"],
       "cache": true
     },
-    "build-browser-modern": {
+    "build:browser": {
       "inputs": ["default", "^production"],
       "cache": true
     },
-    "build-npm": {
+    "build:browser:modern": {
       "inputs": ["default", "^production"],
       "cache": true
     },
-    "build-npm-modern": {
+    "build:package": {
       "inputs": ["default", "^production"],
       "cache": true
     },
-    "build-package": {
-      "inputs": ["default", "^production"],
-      "cache": true
-    },
-    "build-check-size": {
+    "build:package:modern": {
       "inputs": ["default", "^production"],
       "cache": true
     },
@@ -66,11 +62,33 @@
       "cache": true
     },
     "check:size:json": {
-      "inputs": ["default", "^production", "{projectRoot}/.size-limit.js"],
+      "inputs": [
+        "default",
+        "^production",
+        "{projectRoot}/.size-limit.js",
+        "{projectRoot}/.size-limit.mjs"
+      ],
       "cache": true
     },
     "check:pub": {
       "inputs": ["{projectRoot}/package.json"],
+      "cache": true
+    },
+    "test:pre-commit:affected": {
+      "inputs": ["default", "^test"],
+      "cache": true
+    },
+    "check:size:build:pre-commit:affected": {
+      "inputs": ["default", "^production"],
+      "cache": true
+    },
+    "check:size:json:pre-commit:affected": {
+      "inputs": [
+        "default",
+        "^production",
+        "{projectRoot}/.size-limit.js",
+        "{projectRoot}/.size-limit.mjs"
+      ],
       "cache": true
     }
   },
@@ -95,6 +113,7 @@
       "!{projectRoot}/**/*.txt",
       "!{projectRoot}/serve.json",
       "!{projectRoot}/.size-limit.js",
+      "!{projectRoot}/.size-limit.mjs",
       "!{projectRoot}/.jscpd.json",
       "{workspaceRoot}/tsconfig.build.json",
       "{workspaceRoot}/tsconfig.json",
