--- a/package.json
+++ b/package.json
@@ -7,26 +7,31 @@
     "packages/*"
   ],
   "scripts": {
-    "setup": "npm i --include=optional && npm run build:package",
-    "setup:ci": "npm ci && npm i @nx/nx-linux-x64-gnu && npm run build:package",
+    "setup": "npm i --include=optional && npm run build:package:modern",
+    "setup:ci": "npm ci && npm i @nx/nx-linux-x64-gnu && npm run build:package:modern",
     "clean": "nx run-many -t clean && nx reset && git clean -xdf node_modules",
     "clean:cache": "rimraf -rf ./node_modules/.cache && rimraf -rf ./.nx/cache",
     "start": "nx run-many --targets=start --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
     "start:modern": "nx run-many --targets=start-modern --parallel=3 --projects=@rudderstack/analytics-js-integrations,@rudderstack/analytics-js-plugins,@rudderstack/analytics-js",
     "build": "nx run-many -t build",
-    "build:browser": "nx run-many -t build-browser",
-    "build:browser:modern": "nx run-many -t build-browser-modern",
-    "build:npm": "nx run-many -t build-npm",
-    "build:npm:modern": "nx run-many -t build-npm-modern",
-    "build:package": "nx run-many -t build-package",
-    "package": "nx run-many -t pack",
+    "build:ci": "nx affected -t build --base=$BASE_REF",
+    "build:modern": "nx run-many -t build:modern",
+    "build:modern:ci": "nx affected -t build:modern --base=$BASE_REF",
+    "build:browser": "nx run-many -t build:browser",
+    "build:browser:modern": "nx run-many -t build:browser:modern",
+    "build:package": "nx run-many -t build:package",
+    "build:package:modern": "nx run-many -t build:package:modern",
+    "package": "nx run-many -t package",
     "test": "nx run-many -t test",
-    "test:ci": "nx run-many -t test --configuration=ci --runInBand --maxWorkers=1 --forceExit",
-    "check:lint:ci": "nx run-many -t check:lint:ci --verbose",
+    "test:pre-commit:affected": "nx affected -t test --base=HEAD",
+    "test:ci": "nx affected -t test --base=$BASE_REF --configuration=ci --runInBand --maxWorkers=1 --forceExit",
+    "check:lint:ci": "nx affected -t check:lint:ci --base=$BASE_REF --verbose",
     "check:lint": "nx run-many -t check:lint --verbose",
     "check:size": "nx run-many -t check:size --verbose",
-    "check:size:build": "nx run-many -t build-check-size",
+    "check:size:build": "nx run-many -t check:size:build",
+    "check:size:build:pre-commit:affected": "nx affected -t check:size:build --base=HEAD",
     "check:size:json": "npm run check:size:json:ci -- --verbose",
+    "check:size:json:pre-commit:affected": "nx affected -t check:size:json --base=HEAD --verbose",
     "check:size:json:ci": "nx run-many -t check:size:json",
     "check:circular": "nx run-many -t check:circular --verbose",
     "check:support": "NODE_ENV=production npx browserslist --mobile-to-desktop",
@@ -34,14 +39,15 @@
     "check:duplicates": "nx run-many -t check:duplicates --verbose",
     "check:security": "npm audit --recursive --audit-level=high",
     "check:pub": "nx run-many -t check:pub --verbose",
+    "check:pub:ci": "nx affected -t check:pub --verbose --base=$BASE_REF",
     "format": "prettier --write .",
     "lint:fix": "eslint . --fix",
     "prepare": "husky",
-    "pre-commit": "npm run test && npm run check:size:build && npm run check:size:json && npx lint-staged",
+    "pre-commit": "npm run test:pre-commit:affected && npm run check:size:build:pre-commit:affected && npm run check:size:json:pre-commit:affected && npx lint-staged",
     "commit-msg": "commitlint --edit",
     "commit": "git-cz",
     "postinstall": "patch-package",
-    "build:integrations": "nx run-many --targets=build-browser,build-browser-modern --projects=@rudderstack/analytics-js-integrations",
+    "build:integrations": "nx run-many --targets=build:browser,build:browser:modern --projects=@rudderstack/analytics-js-integrations",
     "build:v3": "nx run-many -t build --exclude=rudder-sdk-js,@rudderstack/analytics-js-sanity-suite,@rudderstack/analytics-js-integrations",
     "build:v1.1": "nx run-many -t build --projects=rudder-sdk-js",
     "build:sanity": "rm -rf packages/sanity-suite/dist && nx run-many --targets=build:all --projects=@rudderstack/analytics-js-sanity-suite",
@@ -163,7 +169,6 @@
     "join-component": "1.1.0",
     "jscpd": "4.0.4",
     "lint-staged": "15.2.7",
-    "madge": "7.0.0",
     "msw": "2.3.1",
     "nx": "19.3.0",
     "patch-package": "8.0.0",
