--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -16,6 +16,7 @@
     "build:npm": "rollup -c --environment DISTRIBUTION_TYPE:npm",
     "build:npm:modern": "exit 0",
     "build:package": "exit 0",
+    "build:package:modern": "exit 0",
     "test": "nx test --maxWorkers=50%",
     "test:ci": "nx test --configuration=ci --runInBand --maxWorkers=1 --forceExit",
     "check:lint": "nx lint",
@@ -31,8 +32,10 @@
     "release": "exit 0",
     "start:integrations": "npm run clean && mkdir dist && mkdir dist/local && npm run build:v1.1 && npm run build:integrations && rsync -r ../analytics-js-integrations/dist/cdn/legacy/js-integrations dist/local && npm run start:local",
     "build:start:local:v3": "npm run build:v3 && npm run start:local:v3",
+    "build:start:local:v1.1": "npm run build:v1.1 && npm run start:local:v1.1",
     "start:local": "DEV_SERVER=true npm run build -- --watch",
     "start:local:v3": "DEV_SERVER=true npm run build:local:v3 -- --watch",
+    "start:local:v1.1": "DEV_SERVER=true npm run build:local:v1.1 -- --watch",
     "start:cdn": "DEV_SERVER=true npm run build:cdn -- --watch",
     "start:cdn:v1.1": "DEV_SERVER=true npm run build:cdn:v1.1 -- --watch",
     "start:cdn:v1": "DEV_SERVER=true npm run build:cdn:v1 -- --watch",
