--- a/examples/angular/sample-app/package.json
+++ b/examples/angular/sample-app/package.json
@@ -20,20 +20,23 @@
     "@angular/router": "18.2.6",
     "@rudderstack/analytics-js": "*",
     "rxjs": "7.8.1",
-    "tslib": "2.7.0",
+    "tslib": "2.8.1",
     "zone.js": "0.14.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "18.2.6",
     "@angular/cli": "18.2.6",
     "@angular/compiler-cli": "18.2.6",
-    "@types/jasmine": "5.1.4",
-    "jasmine-core": "5.3.0",
+    "@types/jasmine": "5.1.5",
+    "jasmine-core": "5.5.0",
     "karma": "6.4.4",
     "karma-chrome-launcher": "3.2.0",
     "karma-coverage": "2.2.1",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
     "typescript": "5.5.4"
+  },
+  "overrides": {
+    "http-proxy-middleware": "2.0.7"
   }
 }
