--- a/examples/nextjs/js/sample-app/package.json
+++ b/examples/nextjs/js/sample-app/package.json
@@ -20,5 +20,9 @@
     "eslint-config-next": "14.2.13",
     "postcss": "8.4.47",
     "tailwindcss": "3.4.13"
+  },
+  "overrides": {
+    "cross-spawn": "7.0.6",
+    "nanoid": "3.3.8"
   }
 }
