--- a/examples/nextjs/page-router/sample-app/package.json
+++ b/examples/nextjs/page-router/sample-app/package.json
@@ -24,5 +24,9 @@
     "postcss": "8.4.47",
     "tailwindcss": "3.4.13",
     "typescript": "5.6.2"
+  },
+  "overrides": {
+    "cross-spawn": "7.0.6",
+    "nanoid": "3.3.8"
   }
 }
