--- a/examples/reactjs/vite/sample-app/package.json
+++ b/examples/reactjs/vite/sample-app/package.json
@@ -25,5 +25,8 @@
     "eslint-plugin-react-refresh": "0.4.12",
     "typescript": "5.6.2",
     "vite": "5.4.8"
+  },
+  "overrides": {
+    "cross-spawn": "7.0.6"
   }
 }
