--- a/examples/serverless/cloudflare-worker/package.json
+++ b/examples/serverless/cloudflare-worker/package.json
@@ -14,5 +14,8 @@
 		"@vespaiach/axios-fetch-adapter": "0.3.1",
 		"host-proxy": "1.0.2",
 		"http-forward": "0.1.3"
-	}
+	},
+	"overrides": {
+    "cookie": "0.7.2"
+  }
 }
