--- a/examples/integrations/Ninetailed/sample-apps/app-using-v3-cdn/package.json
+++ b/examples/integrations/Ninetailed/sample-apps/app-using-v3-cdn/package.json
@@ -14,6 +14,7 @@
   },
   "overrides": {
     "nth-check": "2.1.1",
+    "serialize-javascript": "6.0.2",
     "postcss": "8.4.47"
   },
   "scripts": {
