--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "@commitlint/config-conventional": "19.8.0",
     "@commitlint/config-nx-scopes": "19.8.0",
     "@digitalroute/cz-conventional-changelog-for-jira": "8.0.1",
+    "@eslint/js": "9.24.0",
     "@jscutlery/semver": "5.6.0",
     "@nx/eslint": "20.7.2",
     "@nx/eslint-plugin": "20.7.2",
@@ -141,6 +142,8 @@
     "@types/jest": "29.5.14",
     "@types/node": "22.14.0",
     "@types/ramda": "0.30.2",
+    "@typescript-eslint/eslint-plugin": "8.29.1",
+    "@typescript-eslint/parser": "8.29.1",
     "babel-plugin-transform-object-hasown": "1.1.0",
     "commitizen": "4.3.1",
     "commitlint": "19.8.0",
@@ -149,9 +152,6 @@
     "dotenv": "16.5.0",
     "each": "2.7.2",
     "eslint": "9.24.0",
-    "@eslint/js": "9.24.0",
-    "@typescript-eslint/eslint-plugin": "8.29.1",
-    "@typescript-eslint/parser": "8.29.1",
     "eslint-config-prettier": "10.1.2",
     "eslint-import-resolver-node": "0.3.9",
     "eslint-import-resolver-typescript": "4.3.2",
@@ -207,8 +207,12 @@
     "@rollup/rollup-linux-x64-gnu": "4.39.0"
   },
   "overrides": {
-    "debug": "4.3.4",
-    "@babel/runtime": "7.26.10"
+    "rudder-component-cookie": {
+      "debug": "2.6.9"
+    },
+    "@segment/localstorage-retry": {
+      "debug": "2.6.9"
+    }
   },
   "lint-staged": {
     "*.{json,js,md,ts}": "prettier --write"
