--- a/examples/reactjs/js/sample-app/package.json
+++ b/examples/reactjs/js/sample-app/package.json
@@ -13,15 +13,19 @@
   },
   "devDependencies": {
     "@testing-library/dom": "10.4.0",
-    "@types/jest": "29.5.14",
-    "@types/node": "22.14.0",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.2",
+    "@types/jest": "30.0.0",
+    "@types/node": "24.0.15",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "react-scripts": "5.0.1"
   },
   "overrides": {
     "nth-check": "2.1.1",
-    "postcss": "8.4.35"
+    "postcss": "8.4.35",
+    "jsdom": {
+      "form-data": "3.0.4"
+    },
+    "webpack-dev-server": "5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
