--- a/examples/integrations/Ninetailed/sample-apps/app-using-npm/package.json
+++ b/examples/integrations/Ninetailed/sample-apps/app-using-npm/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ninetailed/experience.js": "7.11.1",
+    "@ninetailed/experience.js": "7.16.0",
     "@rudderstack/analytics-js": "*",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
@@ -11,13 +11,14 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "4.2.4"
+    "web-vitals": "5.0.3"
   },
   "overrides": {
     "nth-check": "2.1.1",
     "postcss": "8.4.47",
-    "react-scripts": {
-      "workbox-webpack-plugin": "7.3.0"
+    "webpack-dev-server": "5.2.2",
+    "jsdom": {
+      "form-data": "3.0.4"
     }
   },
   "scripts": {
