--- a/examples/nextjs/page-router/sample-app/package.json
+++ b/examples/nextjs/page-router/sample-app/package.json
@@ -6,24 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf node_modules package-lock.json .next",
+    "setup": "npm install"
   },
   "dependencies": {
     "@rudderstack/analytics-js": "*",
-    "@tailwindcss/postcss": "4.1.3",
-    "next": "15.2.4",
+    "@tailwindcss/postcss": "4.1.11",
+    "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@types/node": "22.14.0",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.1",
+    "@types/node": "24.0.15",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "autoprefixer": "10.4.21",
-    "eslint": "9.24.0",
-    "eslint-config-next": "15.2.4",
-    "postcss": "8.5.3",
-    "tailwindcss": "4.1.3",
+    "eslint": "9.31.0",
+    "eslint-config-next": "15.4.2",
+    "postcss": "8.5.6",
+    "tailwindcss": "4.1.11",
     "typescript": "5.8.3"
   },
   "overrides": {
