--- a/examples/reactjs/ts/sample-app/package.json
+++ b/examples/reactjs/ts/sample-app/package.json
@@ -12,16 +12,20 @@
     "web-vitals": "4.2.4"
   },
   "devDependencies": {
-    "@types/jest": "29.5.14",
-    "@types/node": "22.14.0",
-    "@types/react": "19.0.3",
-    "@types/react-dom": "19.1.1",
+    "@types/jest": "30.0.0",
+    "@types/node": "24.0.15",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "react-scripts": "5.0.1",
     "typescript": "4.9.5"
   },
   "overrides": {
     "nth-check": "2.1.1",
-    "postcss": "8.4.35"
+    "postcss": "8.4.35",
+    "jsdom": {
+      "form-data": "3.0.4"
+    },
+    "webpack-dev-server": "5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
