--- a/examples/reactjs/vite/sample-app/package.json
+++ b/examples/reactjs/vite/sample-app/package.json
@@ -17,17 +17,23 @@
     "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.2",
-    "@typescript-eslint/eslint-plugin": "8.29.1",
-    "@typescript-eslint/parser": "8.29.1",
-    "@vitejs/plugin-react-swc": "3.8.1",
-    "eslint": "9.24.0",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "@typescript-eslint/eslint-plugin": "8.37.0",
+    "@typescript-eslint/parser": "8.37.0",
+    "@vitejs/plugin-react-swc": "3.11.0",
+    "eslint": "9.31.0",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
-    "eslint-plugin-react-refresh": "0.4.19",
-    "globals": "16.0.0",
+    "eslint-plugin-react-refresh": "0.4.20",
+    "globals": "16.3.0",
     "typescript": "5.8.3",
-    "vite": "6.2.5"
+    "vite": "7.0.5"
+  },
+  "overrides": {
+    "brace-expansion": "1.1.12",
+    "minimatch": {
+      "brace-expansion": "^2.0.1"
+    }
   }
 }
