--- a/examples/serverless/vercel-edge/package.json
+++ b/examples/serverless/vercel-edge/package.json
@@ -6,24 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf node_modules package-lock.json",
+    "setup": "npm install"
   },
   "dependencies": {
     "@rudderstack/analytics-js-service-worker": "*",
-    "@tailwindcss/postcss": "4.1.3",
+    "@tailwindcss/postcss": "4.1.11",
     "autoprefixer": "10.4.21",
-    "next": "15.2.5",
-    "postcss": "8.5.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "tailwindcss": "4.1.3"
+    "next": "15.4.2",
+    "postcss": "8.5.6",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "tailwindcss": "4.1.11"
   },
   "devDependencies": {
-    "@types/node": "22.14.0",
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2",
-    "eslint": "9.24.0",
-    "eslint-config-next": "15.2.5",
+    "@types/node": "24.0.15",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "eslint": "9.31.0",
+    "eslint-config-next": "15.4.2",
     "typescript": "5.8.3"
   }
 }
